--- a/Html Practise/index.html
+++ b/Html Practise/index.html
@@ -6,8 +6,17 @@
 </head>
 <body>
     <h1>This is main heading</h1>
-    <p lang="fr">This is the paragraph for main heading</p>
+    <p>This is the paragraph for main heading</p>
     <h2>This sub-heading</h2>
     <p>This is the paragraph for sub-heading</p>
+    <h3>This is paragraph with BOLD words</h3>
+    <p>We are using the element <b>Bold</b> in this paragraph</p>
+    <b>Bold element can exist independently in body element</b>
+    <h3>This paragraph consist of italic words</h3>
+    <p>Banana is a <i>delicious</i> fruit</p>
+    <i>Italic element can exist independently in body element</i>
+    <h3>This is the paragraph of characters with superscript and subscript</h3>
+    <p>Today's date is 25<sup>th</sup> of May</p>
+    <p>The chemical formula of water is H<sub>2</sub>O</p>
 </body>
 </html>
