--- a/Html Practise/index.html
+++ b/Html Practise/index.html
@@ -72,5 +72,56 @@
                     <p><s>Was $995</s></p>
                     <p>Now only $375</p>
 
+                <h4>Ordered List</h4>
+                    <ol>
+                        <li>Apple</li>
+                        <li>Banana</li>
+                        <li>Mango</li>
+                        <li>Grapes</li>
+                        <li>Strawberry</li>
+                    </ol>
+
+                <h4>Unordered List</h4>
+                    <ul>
+                        <li>Apple</li>
+                        <li>Banana</li>
+                        <li>Mango</li>
+                        <li>Grapes</li>
+                        <li>Strawberry</li>
+                    </ul>
+
+                <h4>Definition List</h4>
+                    <ul>
+                        <dl>
+                            <li><dt>Software Testing</dt></li>
+                                  <dd>It is where we compare the actual results with the expected results in-order to find defects
+                                    in software under Testing </dd>
+                                  <dt>Software Review</dt>
+                                  <dd>Its is a verification method where we show our artifacts to our friends or peers inorder to find defects
+                                in the software under testing, for example: Walkthrough, buddy checking, review by circulation,
+                                  </dd>
+                        </dl>
+                    </ul>
+                
+                <h4>Nested List</h4>
+                    <ol>
+                        <li>Fruits</li>
+                            <ul>
+                                <li>Banana</li>
+                                <li>Mango</li>
+                                <li>Grapes</li>
+                            </ul>
+                        <li>Drinks</li>
+                            <ul>
+                                <li>Pepsi</li>
+                                <li>Coke</li>
+                                <li>Sprite</li>
+                            </ul>    
+                    </ol>
+
+
+
+
+
 </body>
 </html>
