--- a/Html Practise/index.html
+++ b/Html Practise/index.html
@@ -135,8 +135,8 @@
                 
                 <h4>Relative URL</h4>
                     <ul>
-                        <li><a Href = "HtmlPractise/Page2/index2.html">Porn Hub</a></li>
-
+                        <li><a Href="index2.html">2nd Page</a></li>
+                        
                     </ul>
 
 </body>
