--- a/Html Practise/index.html
+++ b/Html Practise/index.html
@@ -136,7 +136,8 @@
                 <h4>Relative URL</h4>
                     <ul>
                         <li><a Href="index2.html">2nd Page</a></li>
-                        
+                        <li><a href="Currency/index3.html"></a>Currency Rates</li>
+                        <h1>I dont care</h1>
                     </ul>
 
 </body>
