List, Tables and Form

--- a/Css Practise/boxespractise.html
+++ b/Css Practise/boxespractise.html
@@ -12,7 +12,7 @@
 <body>
     <div id="details">
         <div id="logo">
-            <img src="Logo.png" alt="Football Logo">
+            <img src="Images/Logo.png" alt="Football Logo">
         </div>
         <ul>
             <li>Home</li>
@@ -20,7 +20,7 @@
             <li>Repairs</li>
             <li>About</li>
         </ul>
-        <img id="play" src="imgtest1.jpg" alt="Footballer">
+        <img id="play" src="Images/imgtest1.jpg" alt="Footballer">
         <p>We specialise in the sales and repair of classic keyboards, in particular the Fender Rhodes, Wurlitzer EP200, and Hohner Clavinet.</p>
 
 
