Login Form CSS Completed.

--- a/P1, Form Validation/index.html
+++ b/P1, Form Validation/index.html
@@ -27,6 +27,7 @@
                 <small>Error Message</small>
 
             </div>
+            <!--Ak element ma multiple classes hosakte hain -->
             <div class="form-control">
                 <label for="email">Email</label>
 
@@ -44,7 +45,7 @@
 
             </div>
             <div class="form-control">
-                <label for="password2">Password</label>
+                <label for="password2">Confirm Password</label>
 
                 <!--"input#idname = idher input kay tag open hoga with id"-->
                 <input type="password" id="password2" placeholder="Enter Password">
