--- a/P1, Form Validation/index.html
+++ b/P1, Form Validation/index.html
@@ -7,17 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1: Login Form</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+
 </head>
 
 <body>
-    <script src="script.js"></script>
-
     <!--".classname" == use karke hum div banasakte hain with class-->
     <div class="container">
 
         <!--"form#form.form" == ye shortcut use karke hum form tag
      kay under id(for Javascript) and class(for CSS) assign karsakte hain-->
-        <form action="" id="form" class="form">
+        <form id="form" class="form">
             <h2>Sign up</h2>
             <div class="form-control">
                 <label for="username">Username</label>
@@ -60,7 +59,7 @@
     </div>
 
 
-
+    <script src="script.js"></script>
 
 
 
