--- a/P1, Form Validation/index.html
+++ b/P1, Form Validation/index.html
@@ -17,7 +17,7 @@
         <!--"form#form.form" == ye shortcut use karke hum form tag
      kay under id(for Javascript) and class(for CSS) assign karsakte hain-->
         <form id="form" class="form">
-            <h2>Sign up</h2>
+            <h2>Sign Up</h2>
             <div class="form-control">
                 <label for="username">Username</label>
 
