--- a/P3, Styles Conference/index.html
+++ b/P3, Styles Conference/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Styles Conference</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +16,7 @@
             <a href="index.html">Styles <br> Conference</a>
         </h1>
         <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
-        <nav class="primary-nav">
+        <nav class="nav primary-nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
@@ -34,21 +37,17 @@
                 <h3>World-Class Speakers</h3>
             </a>
             <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-        </section>
-        <!--
+        </section><!--
             Schedule
-        -->
-        <section class="teaser col-1-3">
+        --><section class="teaser col-1-3">
             <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Three Inspiring Days</h3>
             </a>
             <p>Enjoy three inspiring and action_packed days of talks, gatherings, and all_around good times</p>
-        </section>
-        <!--
+        </section><!--
             Venue
-        -->
-        <section class="teaser col-1-3">
+        --><section class="teaser col-1-3">
             <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>The Chicago Theatre</h3>
@@ -60,7 +59,7 @@
     </section>
     <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
-        <nav>
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
